Source/JavaScriptCore/dfg/DFGDoesGC.cpp
@@ -372,7 +372,6 @@ bool doesGC(Graph& graph, Node* node)
     case StringReplaceRegExp:
     case StringSlice:
     case StringValueOf:
-    case ObjectToString:
     case CreateRest:
     case ToLowerCase:
     case CallDOMGetter:
