Source/JavaScriptCore/ftl/FTLCapabilities.cpp
@@ -333,7 +333,6 @@ inline CapabilityLevel canCompile(Node* node)
     case StringValueOf:
     case StringSlice:
     case ToLowerCase:
-    case ObjectToString:
     case NumberToStringWithRadix:
     case NumberToStringWithValidRadixConstant:
     case CheckSubClass:
