Source/JavaScriptCore/runtime/ObjectPrototype.h
@@ -45,4 +45,6 @@ private:
     ObjectPrototype(VM&, Structure*);
 };
 
+JS_EXPORT_PRIVATE EncodedJSValue JSC_HOST_CALL objectProtoFuncToString(ExecState*);
+
 } // namespace JSC
